# fuzzy_compare

./: LICENSE  README.md  dune-project  fuzzy_compare.opam
src/: automaton.ml  dune  fuzzy_compare.ml  fuzzy_compare.mli
test/: dune  test_fuzzy_compare.ml
