opam-version: "2.0"
maintainer: "Simon Grondin"
authors: [
  "Simon Grondin"
]
synopsis: "Fastest bounded Levenshtein comparator over generic structures"
description: """
This library does not calculate the edit distance.

Rather, it provides extremely efficient automata that answer whether 2 values are within a predetermined number of edits of one another. Edits are: additions, deletions, replacements.

Once generated, an automaton can be reused to compare any 2 values in around 2-8 µs.
"""
license: "MIT"
tags: []
homepage: "https://github.com/SGrondin/fuzzy_compare"
dev-repo: "git://github.com/SGrondin/fuzzy_compare"
doc: "https://github.com/SGrondin/fuzzy_compare"
bug-reports: "https://github.com/SGrondin/fuzzy_compare/issues"
depends: [
  "ocaml" { >= "4.10.0" }
  "dune" { >= "1.9.0" }

  "core_kernel" { >= "v0.14.0" & < "v0.15.0" }
  # "ocamlformat" { = "0.19.0" } # Development
  # "ocaml-lsp-server" # Development

  "uuseg" { with-test }
  "uunf" { with-test }
]
build: ["dune" "build" "-p" name "-j" jobs]
